Use modern http client